--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.0.18",
     "@meshsdk/core": "^1.5.4",
     "@meshsdk/react": "^1.1.7",
+    "firebase": "^9.22.2",
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
