--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-timer-hook": "^3.0.7",
     "tailwindcss": "3.3.3",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
