--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "Bad Labs",
   "name": "Bad Labs",
-  "description": "",
+  "description": "Web3 tools for Cardano",
   "icons": [
     {
       "src": "favicon.ico",
@@ -25,6 +25,6 @@
   "background_color": "#000000",
   "developer": {
     "name": "Ben Elferink",
-    "url": "https://github.com/belferink1996"
+    "url": "https://github.com/BenElferink"
   }
 }
