--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-timer-hook": "^3.0.7",
     "tailwindcss": "3.3.3",
     "uuid": "^9.0.0",
+    "wavesurfer.js": "^7.2.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
