update cron jobs

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "crons": [
     {
-      "path": "/api/cron/giveaways",
-      "schedule": "0 * * * *"
+      "path": "/api/cron/polls",
+      "schedule": "*/60 * * * *"
     },
     {
-      "path": "/api/cron/polls",
-      "schedule": "0 * * * *"
+      "path": "/api/cron/giveaways",
+      "schedule": "*/10 * * * *"
     }
   ]
 }
