--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/cron/polls",
-      "schedule": "*/60 * * * *"
+      "schedule": "0 * * * *"
     },
     {
       "path": "/api/cron/giveaways",
