--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/cron/giveaways",
       "schedule": "*/10 * * * *"
+    },
+    {
+      "path": "/api/cron/swaps",
+      "schedule": "*/5 * * * *"
     }
   ]
 }
