--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,3 @@
 {
-  "crons": [
-    {
-      "path": "/api/cron/polls",
-      "schedule": "0 * * * *"
-    },
-    {
-      "path": "/api/cron/giveaways",
-      "schedule": "*/15 * * * *"
-    },
-    {
-      "path": "/api/cron/swaps",
-      "schedule": "*/5 * * * *"
-    },
-    {
-      "path": "/api/cron/mint-refund-tokens",
-      "schedule": "*/5 * * * *"
-    },
-    {
-      "path": "/api/cron/burn-refund-tokens",
-      "schedule": "0 * * * *"
-    }
-  ]
+  "crons": []
 }
