--- a/package.json
+++ b/package.json
@@ -8,34 +8,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint-fix": "next lint --fix"
   },
   "dependencies": {
     "@blockfrost/blockfrost-js": "^5.5.0",
     "@heroicons/react": "^2.1.5",
-    "@meshsdk/core": "^1.7.7",
-    "@meshsdk/react": "^1.7.7",
+    "@meshsdk/core": "^1.7.9",
+    "@meshsdk/react": "^1.7.9",
     "axios": "^1.7.7",
-    "firebase": "^10.14.0",
-    "next": "14.2.14",
+    "firebase": "^11.0.1",
+    "next": "15.0.1",
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-timer-hook": "^3.0.7",
-    "tailwindcss": "3.4.13",
-    "uuid": "^10.0.0",
-    "wavesurfer.js": "^7.8.6",
+    "react-timer-hook": "^3.0.8",
+    "tailwindcss": "3.4.14",
+    "wavesurfer.js": "^7.8.7",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/node": "^22.7.4",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
-    "@types/uuid": "^10.0.0",
+    "@types/node": "^22.7.9",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.11.1",
-    "eslint-config-next": "^14.2.14",
-    "typescript": "^5.6.2"
-  }
+    "eslint": "^9.13.0",
+    "eslint-config-next": "^15.0.1",
+    "typescript": "^5.6.3"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
