--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "cardano-tools",
+  "name": "badfoxmc-labs",
   "version": "0.1.0",
   "private": true,
   "homepage": "/",
   "author": "Ben Elferink <ben.elferink@icloud.com> (https://github.com/BenElferink)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/BenElferink/cardano-tools.git"
+    "url": "https://github.com/BenElferink/badfoxmc-labs.git"
   },
   "bugs": {
-    "url": "https://github.com/BenElferink/cardano-tools/issues"
+    "url": "https://github.com/BenElferink/badfoxmc-labs/issues"
   },
   "scripts": {
     "dev": "next dev",
@@ -21,27 +21,27 @@
   "dependencies": {
     "@blockfrost/blockfrost-js": "^5.7.0",
     "@heroicons/react": "^2.2.0",
-    "@meshsdk/core": "^1.7.31",
-    "@meshsdk/react": "^1.7.31",
+    "@meshsdk/core": "^1.8.0",
+    "@meshsdk/react": "^1.8.0",
     "axios": "^1.7.9",
-    "firebase": "^11.0.2",
-    "next": "15.0.4",
+    "firebase": "^11.1.0",
+    "next": "15.1.0",
     "postcss": "8.4.49",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-timer-hook": "^3.0.8",
     "tailwindcss": "3.4.16",
-    "wavesurfer.js": "^7.8.10",
+    "wavesurfer.js": "^7.8.11",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/node": "^22.10.1",
+    "@types/node": "^22.10.2",
     "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.16.0",
-    "eslint-config-next": "^15.0.4",
+    "eslint-config-next": "^15.1.0",
     "typescript": "^5.7.2"
   }
 }
